--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.1.2",
     "glslify-loader": "^2.0.0",
     "gsap": "^3.12.7",
+    "lenis": "^1.3.1",
     "leva": "^0.10.0",
     "next": "15.3.1",
     "raw-loader": "^4.0.2",
